# lsassC

./: CMakeLists.txt  README.md
asm/x64/: ProxyCaller.asm
include/: Common.h  Constexpr.h  GetProc.h  Instance.h  Macros.h  Native.h  ProxyCaller.h  Syscalls.h  Util.h  Win32.h  identity.h
include/identity/: define.h  undefine.h
src/: Common.c  GetProc.c  Main.c  Main.cpp  ProxyCaller.cpp  Syscalls.asm  Syscalls.c  Util.cpp  Win32.c  main.c
